<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_time_table"
            android:icon="@drawable/ic_time_table_black_24dp"
            android:title="@string/Rooster" />
        <item
            android:id="@+id/nav_homework"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/huiswerk" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_action_grades"
            android:title="@string/cijfers" />
        <item
            android:id="@+id/nav_absence"
            android:title="Absentie" />
        <item
            android:id="@+id/signout"
            android:title="@string/sign_out" />
    </group>

</menu>
